# quality-audit

./: package-lock.json
backend/: Pipfile  README.md  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/models/: audit.py  audit_shifts.py  comment.py  date.py  date_updates.py  non_compliance.py  priority.py  process.py  shift.py  status.py
backend/app/models/testes/: account.py  bank.py  services.py  transaction.py
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: comment.vue  createAudit.vue  datePicker.vue  nonCompliance.vue  oppositiveCard.vue  p-data-table.vue  q-date-picker.vue
frontend/pages/: audit.vue  index.vue  management.vue  management2.vue  nonCompliance.vue
frontend/plugins/: vuetify.js
frontend/queries/: addAudit.gql  audit.gql  comment.gql  dateUpdates.gql  dates.gql  nonCompliance.gql  priorities.gql  process.gql  putAudit.gql  putComment.gql  putDate.gql  putDateUpdates.gql  putNonCompliance.gql  shift.gql
